First batch of modifications

--- a/index.html
+++ b/index.html
@@ -1,60 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Frontend Mentor | Loopstudios landing page</title>
-
-  
 </head>
+
 <body>
   <header>
-    
+    <div class="container">
+      <div class="menuContainer">
+        <div><img src="./assets/img/logo.svg" alt=""></div>
+        <nav class="menu">
+          <div><img src="./assets/img/icon-hamburger.svg" alt=""></div>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#careers">Careers</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#support">Support</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="bigtitle">
+        <h1>Immersive experiences that deliver</h1>
+      </div>
+    </div>
   </header>
-  <main></main>
-  <footer></footer>
-  About
-  Careers
-  Events
-  Products
-  Support
 
-  Immersive experiences that deliver
+  <main>
+    <div class="container">
+      <div class="head">
+        <div><img src="./assets/img/mobile/image-interactive.jpg" alt=""></div>
+        <div class="chapter">
+          <h2>The leader in interactive VR</h2>
 
-  The leader in interactive VR
+          <p>Founded in 2011, Loopstudios has been producing world-class virtual reality
+            projects for some of the best companies around the globe. Our award-winning
+            creations have transformed businesses through digital experiences that bind
+            to their brand.</p>
+        </div>
+      </div>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+      <div class="creations">
+        <h2>Our creations</h2>
+      </div>
 
-  Our creations
+      <div class="create">
+        <div>
+          <button>See all</button>
+        </div>
 
-  See all
+        <div class="cardcontainer">
 
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
+          <div class="card">
+            <div>Deep earth</div>
+            <div><img src="./assets/img/mobile/image-deep-earth.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>Night arcade</div>
+            <div><img src="./assets/img/mobile/image-night-arcade.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>Soccer team VR</div>
+            <div><img src="./assets/img/mobile/image-soccer-team.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>The grid</div>
+            <div><img src="./assets/img/mobile/image-grid.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>From up above VR</div>
+            <div><img src="./assets/img/mobile/image-from-above.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>Pocket borealis</div>
+            <div><img src="./assets/img/mobile/image-pocket-borealis.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>The curiosity</div>
+            <div><img src="./assets/img/mobile/image-curiosity.jpg" alt=""></div>
+          </div>
+          <div class="card">
+            <div>Make it fisheye</div>
+            <div><img src="./assets/img/mobile/image-fisheye.jpg" alt=""></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="container">
+      <div class="footerContainer">
+        <div class="leftside">
+          <div class="logo"><img src="./assets/img/logo.svg" alt=""></div>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#careers">Careers</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#products">Products</a></li>
+            <li><a href="#support">Support</a></li>
+          </ul>
+        </div>
+        <div class="rightside">
+          <div class="socialnetworks">
+            <div><img src="./assets/img/icon-facebook.svg" alt=""></div>
+            <div><img src="./assets/img/icon-twitter.svg" alt=""></div>
+            <div><img src="./assets/img/icon-pinterest.svg" alt=""></div>
+            <div><img src="./assets/img/icon-instagram.svg" alt=""></div>
+          </div>
+          <div class="copyright">
+            © 2021 Loopstudios. All rights reserved.
+          </div>
+        </div>
+      </div>
+  </footer>
 </body>
+
 </html>
