--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <div class="menuContainer">
         <div><img src="./assets/img/logo.svg" alt=""></div>
         <nav class="menu">
-          <div><img src="./assets/img/icon-hamburger.svg" alt=""></div>
+          <input type="checkbox" id="openmenu">
+          <label for="openmenu">
+            <img src="./assets/img/icon-hamburger.svg" alt="">
+          </label>
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#careers">Careers</a></li>
@@ -53,7 +56,7 @@
 
           <div class="cardcontainer">
             <div class="card">
-              <div>Deep earth</div>
+              <div class="legend">Deep earth</div>
               <div><img src="./assets/img/mobile/image-deep-earth.jpg" alt=""></div>
             </div>
             <div class="card">
@@ -87,7 +90,7 @@
           </div>
 
         </div>
-        
+
         <h2>Our creations</h2>
 
       </div>
