Refine filter on cards hover

--- a/index.html
+++ b/index.html
@@ -56,36 +56,36 @@
 
           <div class="cardcontainer">
             <div class="card">
-              <div class="legend">Deep earth</div>
               <div><img src="./assets/img/mobile/image-deep-earth.jpg" alt=""></div>
+              <div>Deep earth</div>
             </div>
             <div class="card">
-              <div>Night arcade</div>
               <div><img src="./assets/img/mobile/image-night-arcade.jpg" alt=""></div>
+              <div>Night arcade</div>
             </div>
             <div class="card">
-              <div>Soccer team VR</div>
               <div><img src="./assets/img/mobile/image-soccer-team.jpg" alt=""></div>
+              <div>Soccer team VR</div>
             </div>
             <div class="card">
-              <div>The grid</div>
               <div><img src="./assets/img/mobile/image-grid.jpg" alt=""></div>
+              <div>The grid</div>
             </div>
             <div class="card">
-              <div>From up above VR</div>
               <div><img src="./assets/img/mobile/image-from-above.jpg" alt=""></div>
+              <div>From up above VR</div>
             </div>
             <div class="card">
-              <div>Pocket borealis</div>
               <div><img src="./assets/img/mobile/image-pocket-borealis.jpg" alt=""></div>
+              <div>Pocket borealis</div>
             </div>
             <div class="card">
-              <div>The curiosity</div>
               <div><img src="./assets/img/mobile/image-curiosity.jpg" alt=""></div>
+              <div>The curiosity</div>
             </div>
             <div class="card">
-              <div>Make it fisheye</div>
               <div><img src="./assets/img/mobile/image-fisheye.jpg" alt=""></div>
+              <div>Make it fisheye</div>
             </div>
           </div>
 
